--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,37 @@
-*.DS_Store
 *.swp
 *.bak
-/nbproject/private/
-*/.sass-cache/
-.idea
+tests/functional/node_modules/
+/tests/functional/reports/
+selenium-*.jar
+.sass-cache
 *.sass-cache
-node_modules
+*/.sass-cache/
+.scss-cache
+*.scss-cache
+*/.scss-cache/
+scss/.sass-cache/
+.bower-cache
+.bower-registry
+.bower-tmp
+.idea
+.idea/*
+_book
+nbproject
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+.nb-gradle/
+*.log
 npm-debug.log
+node_modules
+*.DS_Store
+.DS_Store
+Thumbs.db
+sftp-config.json
+*.sublime-project
+*.sublime-workspace
+.phpintel
